--- a/src/Splash.css
+++ b/src/Splash.css
@@ -109,7 +109,7 @@ body {
 }
 
 .splash-loading-text {
-  height: 15%;
+  height: 10%;
   width: 100%;
   color: #fff;
   font-family: ARCADECLASSIC, monospace;
@@ -119,7 +119,7 @@ body {
 
 .splash-loading-box-container {
     display: flex;
-    height: 85%;
+    height: 90%;
     width: 100%;
     justify-content: center;
     margin-top: 10px;
@@ -154,11 +154,13 @@ body {
 }
 
 .kana {
-  font-size: 30px;
+  font-size: 28px;
   text-align: center;
   position: absolute;
-  margin-top: 65vh;
-  width: 100%;
+  overflow: hidden;
+  margin-top: 610px;
+  white-space: nowrap;
+  margin-left: 30px;
 }
 
 
@@ -175,10 +177,13 @@ body {
 }
 
 .kana.rotated {
-  margin-top: -61vh;
+  margin-bottom: 580px;
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 30px;
 }
 
-@media (max-width: 965px) {
-  .kana { margin-top: 40vh; margin-left: 20px; }
-  .kana.rotated { margin-top: -45vh; margin-right: 30px; }
+@media (max-width: 600px) {
+  .kana { margin-top: 250px; }
+  .kana.rotated { margin-bottom: 300px; }
 }
