--- a/src/Splash.css
+++ b/src/Splash.css
@@ -19,10 +19,14 @@ html, body {
 body {
   overflow: hidden;
   background: url("/splash-background.png");
-  background-repeat: no-repeat;
-  background-size: 1980px 100vh;
+  background-position: center;
+  background-size: 100vw 100vh;
   width: 100vw;
   height: 100vh;
+}
+
+audio {
+  display: none;
 }
 
 .splash-container {
@@ -181,6 +185,7 @@ body {
 }
 
 @media (max-width: 600px) {
+  body { background-size: 1980px 100vh; background-position: right; }
   .kana { display: none; }
   .kana.rotated { display: none; }
 }
@@ -205,8 +210,5 @@ body {
   background: url("/audio.png");
   background-size: contain;
   filter: invert(1);
-}
-
-audio {
-  display: none;
+  z-index: 4;
 }
