--- a/src/Releases.css
+++ b/src/Releases.css
@@ -35,7 +35,7 @@
    align-items: center;
    margin: 10px 250px 0px 250px;
    opacity: 0;
-   animation: fade-in 3s ease-in forwards;
+   animation: fade-in 3s ease-in forwards, float 6s ease-in-out infinite alternate;
 }
 
 @media (max-width: 920px) {
