--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ html {
 body {
   margin: 0;
   font-family: sans-serif;
-  background: url("/background.png");
+  background: url("/background.jpg");
   background-attachment: fixed;
   background-position: bottom;
   background-size: cover;
