--- a/src/App.css
+++ b/src/App.css
@@ -150,6 +150,7 @@ nav > ol > li > a:link {
 @media (max-width: 600px) {
   nav > ol > li { margin: 0 5vw; font-size: 100%; }
   .clouds { background-position: center 130%; }
+  #root { height: auto; }
 }
 
 @keyframes fade-in {
