--- a/src/Releases.css
+++ b/src/Releases.css
@@ -39,7 +39,7 @@
 }
 
 @media (max-width: 920px) {
-  .releases-container { grid-template-columns: 100%;  grid-row-gap: 50px; margin: 100px 10px 50px 10px; }
+  .releases-container { grid-template-columns: 100%;  grid-row-gap: 50px; margin: 0px }
   .release { max-width: 100%; max-height: 100%; }
 } 
 
