--- a/src/Releases.css
+++ b/src/Releases.css
@@ -42,6 +42,7 @@
   .content.contact { margin: 50px 10px 0 10px; }
   .releases-container { grid-template-columns: 100%;  grid-row-gap: 50px; margin: 0; }
   .release { max-width: 100%; max-height: 100%; }
+  #root.ios { height: auto; }
 } 
 
 .shine:hover > img {
