--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,7 @@ nav > ol > li > a:link {
   justify-content: center;
   align-items: center;
   height: 100%;
+  margin: 50px 10px 50px 10px;
 }
 
 .social-media-bar {
