--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,6 @@ nav > ol > li > a:link {
   justify-content: center;
   align-items: center;
   height: 100%;
-  margin: 50px 10px 50px 10px;
 }
 
 .social-media-bar {
@@ -151,6 +150,7 @@ nav > ol > li > a:link {
 @media (max-width: 600px) {
   nav > ol > li { margin: 0 5vw; font-size: 100%; }
   .clouds { background-position: center 130%; }
+  .content { margin: 50px 10px 50px 10px; }
 }
 
 @keyframes fade-in {
