--- a/src/Loading.css
+++ b/src/Loading.css
@@ -61,3 +61,12 @@
     opacity: 0.4;
   }
 }
+
+.response {
+  position: absolute;
+  width: 100%;
+  opacity: 0;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
