--- a/src/App.css
+++ b/src/App.css
@@ -178,3 +178,36 @@ nav > ol > li > a:link {
 .soundcloud-social:hover {
   fill: #fff074;
 }
+
+audio {
+  display: none;
+}
+
+.audio-control {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  margin: 10px;
+  margin-top: 60px;
+  opacity: 1;
+  background-size: contain;
+  filter: invert(1);
+}
+
+.mute {
+  background: url("/mute.png");
+  background-size: contain;
+  filter: invert(1);
+}
+
+.audio {
+  background: url("/audio.png");
+  background-size: contain;
+  filter: invert(1);
+  z-index: 4;
+}
+
+.audio-contain {
+  position: absolute;
+  z-index: 10;
+}
