--- a/src/Loading.css
+++ b/src/Loading.css
@@ -4,7 +4,7 @@
   opacity: 0;
   justify-content: center;
   align-items: center;
-  z-index: 10;
+  z-index: -1;
 }
 
 .disable {
@@ -14,6 +14,7 @@
 .enable {
   opacity: 0.4;
   animation: fade-in 1s linear forwards;
+  z-index: 10;
 }
 
 .loading.show {
@@ -65,8 +66,39 @@
 .response {
   position: absolute;
   width: 100%;
-  opacity: 0;
+  opacity: 1;
   justify-content: center;
   align-items: center;
   z-index: 10;
+  margin: 0 auto;
+  display: flex;
+  opacity: 0;
+  z-index: -1;
+}
+
+.message-contain {
+}
+
+.message {
+  width: 300px;
+  height: 300px;
+  background-color: #fff;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  z-index: -1;
+}
+
+.message-button {
+  background: #ffb1d1;
+}
+
+.message-message {
+  text-align: center;
+}
+
+.error {
+  color: red;
 }
