--- a/src/About.css
+++ b/src/About.css
@@ -1,10 +1,7 @@
 .about-contain {
   display: grid;
-  grid-template-columns: 100%;
+  grid-template-columns: 25% 40% 25%;
   width: 100%;
-  height: 100%;
-  max-width: 700px;
-  max-height: 700px;
   justify-content: center;
   align-items: center;
   opacity: 0;
@@ -16,6 +13,33 @@
   padding: 20px;
 }
 
+.birb {
+  filter: drop-shadow(0px 5px 10px #000);
+  height: 350px;
+}
+
+.birb-left {
+  justify-self: right;
+}
+
+.birb-right {
+  transform: scaleX(-1);
+}
+
+.input-bg.about {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.birb-bottom {
+  width: 100%;
+  height: 100vw;
+  display: flex;
+}
+
 @media (max-width: 920px) {
-  .about-contain { margin: 10px; }
+  .about-contain { margin: 10px; grid-template-columns: 100%; }
+  .birb { width: 50%; margin-top: 20px; }
+  .birb-right { justify-self: right; }
+  .birb-right { justify-self: left; }
 } 
