--- a/src/Contact.css
+++ b/src/Contact.css
@@ -59,6 +59,14 @@ input:focus, select:focus, textarea:focus, button:focus {
   box-shadow: 0px 10px 20px 3px rgba(0,0,0,0.82);          
 }
 
+input, textarea {
+  -webkit-user-select: text;
+  -khtml-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
+}
+
 @media (max-width: 920px) {
   .contact-contain { grid-template-columns: 100%; }
   .contact-column-left { height: auto; padding: 0px 20px; }
