--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ html {
 body {
   margin: 0;
   font-family: sans-serif;
-  background: url("/background.png");
+  background: url("background.png");
   background-attachment: fixed;
   background-position: bottom;
   background-size: cover;
@@ -27,7 +27,7 @@ nav {
   width: 100%;
   height: 50px;
   min-height: 50px;
-  background: url("/navbar_background.png");
+  background: url("navbar_background.png");
   background-repeat: no-repeat;
   background-size: 100vw 100vh;
 }
@@ -121,7 +121,7 @@ nav > ol > li > a:link {
   position: fixed;
   width: 100%;
   height: 100%;
-  background: url("/clouds.png");
+  background: url("clouds.png");
   background-repeat-y: no-repeat;
   background-position: center 120%;
   opacity: 0.5;
@@ -174,13 +174,13 @@ audio {
 }
 
 .mute {
-  background: url("/mute.png");
+  background: url("mute.png");
   background-size: contain;
   filter: invert(1);
 }
 
 .audio {
-  background: url("/audio.png");
+  background: url("audio.png");
   background-size: contain;
   filter: invert(1);
   z-index: 4;
