--- a/assets/scss/releases.scss
+++ b/assets/scss/releases.scss
@@ -1,53 +1,42 @@
-.release {
-    max-width: 350px;
-    max-height: 350px;
-    cursor: pointer;
-    width: 100%;
-    margin: 0 auto;
-    -webkit-box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
-    -moz-box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
-    box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
-}
+/*
+ *  filename: assets/scss/releases.scss
+ *  description: -
+ **/
 
-.release:hover {
-    animation: rainbow 1s linear infinite 0s;
-}
-
-.show-rainbow {
-    animation: rainbow 1s ease-in infinite 0s;
-}
-
-@keyframes rainbow {
-    from {
-        filter: hue-rotate(deg);
-    }
-    to {
-        filter: hue-rotate(720deg);
-    }
-}
-
-.releases-container {
+.main-content[pathname='/releases'] {
     display: grid;
     width: 100%;
-    grid-template-columns: 33.3% 33.3% 33.3%;
+    grid-template-columns: 400px 400px 400px;
     justify-content: center;
     align-items: center;
-    margin: 10px 250px 0px 250px;
     opacity: 0;
     animation: fade-in 3s ease-in forwards, float 6s ease-in-out infinite alternate;
     grid-row-gap: 50px;
     grid-column-gap: 50px;
-}
 
-@media (max-width: 920px) {
-    .content.contact { margin: 50px 10px 0 10px; }
-    .releases-container { grid-template-columns: 100%;  grid-row-gap: 50px; margin: 0; }
-    .release { max-width: 100%; max-height: 100%; }
-    #root.ios { height: auto; }
-} 
+    @media (max-width: 920px) {
+        grid-template-columns: 100%;
+        grid-row-gap: 50px;
+        margin: 0;
+    }
 
-.shine:hover > img {
-    animation: rainbow 1s linear infinite 0s;
+    .release {
+        cursor: pointer;
+        width: 100%;
+        margin: 0 auto;
+        -webkit-box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
+        -moz-box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
+        box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
+
+        &:hover {
+            animation: rainbow 1s linear infinite 0s;
+        }
+
+        &, & > img {
+            max-width: 350px;
+            max-height: 350px;
+        }
+    }
 }
 
 .shine-contain {
@@ -95,8 +84,4 @@
         left: 110%;
         transition-property: left, top, opacity;
     }
-}
-
-.unreleased {
-    cursor: help;
 }
