--- a/assets/scss/releases.scss
+++ b/assets/scss/releases.scss
@@ -3,16 +3,18 @@
  *  description: -
  **/
 
+//-- Route => ('/releases') Styles --/
 .main-content[pathname='/releases'] {
     display: grid;
     width: 100%;
     grid-template-columns: 400px 400px 400px;
     justify-content: center;
     align-items: center;
-    opacity: 0;
-    animation: fade-in 3s ease-in forwards, float 6s ease-in-out infinite alternate;
+    //animation: fade-in 3s ease-in forwards, float 6s ease-in-out infinite alternate;
     grid-row-gap: 50px;
     grid-column-gap: 50px;
+
+    height: unset;
 
     @media (max-width: 920px) {
         grid-template-columns: 100%;
