--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -36,9 +36,9 @@ body {
     align-items: center;
     height: 100%;
 
-    @media (max-width: 600px) {
-        margin: 50px 10px 50px 10px;
-    }
+    //@media (max-width: 600px) {
+    //    margin: 50px 10px 50px 10px;
+    //}
 }
 
 .clouds {
@@ -46,14 +46,14 @@ body {
     width: 100%;
     height: 100%;
     background: url('Images/clouds.png');
-    background-repeat-y: no-repeat;
-    background-position: center 120%;
+    background-repeat: repeat-x;
+    background-position: bottom;
     opacity: 0.5;
     animation: scroll-clouds 15s linear infinite;
     z-index: -1;
 
     @media (max-width: 600px) {
-        background-position: center 130%;
+        animation: scroll-clouds 30s linear infinite;
     }
 }
 
