--- a/assets/scss/releases.scss
+++ b/assets/scss/releases.scss
@@ -4,22 +4,25 @@
  **/
 
 //-- Route => ('/releases') Styles --/
-.main-content[pathname='/releases'] {
+.main-content[pathname='/releases'] div .float-container {
     display: grid;
     width: 100%;
     grid-template-columns: 400px 400px 400px;
     justify-content: center;
     align-items: center;
-    //animation: fade-in 3s ease-in forwards, float 6s ease-in-out infinite alternate;
     grid-row-gap: 50px;
     grid-column-gap: 50px;
+    margin: 20px 0;
 
-    height: unset;
+    animation: float 5000ms ease-in-out infinite alternate;
+
+    @media (max-width: 1295px) {
+        grid-template-columns: 400px 400px;
+    }
+
 
     @media (max-width: 920px) {
         grid-template-columns: 100%;
-        grid-row-gap: 50px;
-        margin: 0;
     }
 
     .release {
@@ -29,14 +32,43 @@
         -webkit-box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
         -moz-box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
         box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
+        position: relative;
 
         &:hover {
-            animation: rainbow 1s linear infinite 0s;
+            animation: rainbow 1000ms linear infinite 0s, float 500ms ease-in-out infinite alternate;
         }
 
         &, & > img {
-            max-width: 350px;
-            max-height: 350px;
+            width: 350px;
+            height: 350px;
+
+            @media (max-width: 390px) {
+                max-width: 350px;
+                max-height: 350px;
+                width: calc(100vw - 40px);
+                height: calc(100vw - 40px);
+            }
+
+        }
+
+        & > .placeholder {
+            background-image: url('Images/favicon.png'), linear-gradient(90deg, rgba(255,255,255, 0.2) 1%, rgba(255, 255, 255, 0.35) 50%, rgba(255,255,255, 0.2));
+            background-size: 70%, cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            position: absolute;
+            filter: grayscale(1) blur(0.5px) drop-shadow(0px 6px 6px rgba(0, 0, 0, 1));
+            opacity: 0.3;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            
+            & > img {
+                width: 60%;
+                height: 60%;
+            }
         }
     }
 }
