--- a/assets/scss/releases.scss
+++ b/assets/scss/releases.scss
@@ -4,118 +4,109 @@
  **/
 
 //-- Route => ('/releases') Styles --/
-.main-content[pathname='/releases'] div .float-container {
-    display: grid;
-    width: 100%;
-    grid-template-columns: 400px 400px 400px;
-    justify-content: center;
-    align-items: center;
-    grid-row-gap: 50px;
-    grid-column-gap: 50px;
-    margin: 20px 0;
-
-    animation: float 5000ms ease-in-out infinite alternate;
-
-    @media (max-width: 1295px) {
-        grid-template-columns: 400px 400px;
-    }
-
-
-    @media (max-width: 920px) {
-        grid-template-columns: 100%;
-    }
-
-    .release {
-        cursor: pointer;
-        width: 100%;
-        margin: 0 auto;
-        -webkit-box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
-        -moz-box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
-        box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
-        position: relative;
-
-        &:hover {
-            animation: rainbow 1000ms linear infinite 0s, float 500ms ease-in-out infinite alternate;
-        }
-
-        &, & > img {
-            width: 350px;
-            height: 350px;
-
-            @media (max-width: 390px) {
-                max-width: 350px;
-                max-height: 350px;
-                width: calc(100vw - 40px);
-                height: calc(100vw - 40px);
-            }
-
-        }
-
-        & > .placeholder {
-            background-image: url('Images/favicon.png'), linear-gradient(90deg, rgba(255,255,255, 0.2) 1%, rgba(255, 255, 255, 0.35) 50%, rgba(255,255,255, 0.2));
-            background-size: 70%, cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            position: absolute;
-            filter: grayscale(1) blur(0.5px) drop-shadow(0px 6px 6px rgba(0, 0, 0, 1));
-            opacity: 0.3;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            
-            & > img {
-                width: 60%;
-                height: 60%;
-            }
-        }
-    }
+.main-content[pathname='/releases'] > .fade-in {
+  width: 100%;
+  max-width: 1500px;
 }
 
-.shine-contain {
-    position: relative;
+.main-content[pathname='/releases'] div .float-container {
+  width: 100%;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  grid-row-gap: 50px;
+  grid-column-gap: 50px;
+  grid-template-columns: repeat(auto-fill, 350px);
+  padding: 50px;
+  box-sizing: border-box;
+
+  animation: float 5000ms ease-in-out infinite alternate;
+
+  .release {
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
     margin: 0 auto;
-    overflow: hidden;
     -webkit-box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
     -moz-box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
     box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
+    position: relative;
+    aspect-ratio: 1;
+
+    & > img:not(.invisible) {
+      width: 100%;
+      height: 100%;
+    }
+
+    &:hover {
+      animation: rainbow 1000ms linear infinite 0s, float 500ms ease-in-out infinite alternate;
+    }
+
+    & > .placeholder {
+      background-image: url('Images/favicon.png'), linear-gradient(90deg, rgba(255,255,255, 0.2) 1%, rgba(255, 255, 255, 0.35) 50%, rgba(255,255,255, 0.2));
+      background-size: 70%, cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      position: absolute;
+      filter: grayscale(1) blur(0.5px) drop-shadow(0px 6px 6px rgba(0, 0, 0, 1));
+      opacity: 0.3;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      & > img {
+        width: 60%;
+        height: 60%;
+      }
+    }
+  }
+}
+
+.shine-contain {
+  position: relative;
+  margin: 0 auto;
+  overflow: hidden;
+  -webkit-box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
+  -moz-box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
+  box-shadow: 0px 22px 31px 4px rgba(0,0,0,0.82);
 }
 
 .shine:before {
-    position: absolute;
-    content:"";
-    top:-200%;
-    left:-200%;
-    right:-100%;
-    bottom:-100%;
-    width: 200%;
-    height: 200%;
-    z-index: 1;
-    transform: rotate(30deg);
-    overflow: hidden;
-    background: linear-gradient(
-      to right, 
-      rgba(255, 255, 255, 0.0) 0%,
-      rgba(255, 255, 255, 0.13) 89%,
-      rgba(255, 255, 255, 0.3) 90%,
-      rgba(255, 255, 255, 0.13) 97%,
-      rgba(255, 255, 255, 0.0) 100%
-    );
-    animation: shine 1.4s linear;
-    opacity: 0;
-    cursor: pointer;
+  position: absolute;
+  content:"";
+  top:-200%;
+  left:-200%;
+  right:-100%;
+  bottom:-100%;
+  width: 200%;
+  height: 200%;
+  z-index: 1;
+  transform: rotate(30deg);
+  overflow: hidden;
+  background: linear-gradient(
+  to right, 
+  rgba(255, 255, 255, 0.0) 0%,
+  rgba(255, 255, 255, 0.13) 89%,
+  rgba(255, 255, 255, 0.3) 90%,
+  rgba(255, 255, 255, 0.13) 97%,
+  rgba(255, 255, 255, 0.0) 100%
+  );
+  animation: shine 1.4s linear;
+  opacity: 0;
+  cursor: pointer;
 }
 
 @keyframes shine {
-    10% {
-        opacity: 0.6;
-        transition-property: left, top, opacity;
-    }
-    100% {
-        opacity: 0;
-        top: 110%;
-        left: 110%;
-        transition-property: left, top, opacity;
-    }
+  10% {
+    opacity: 0.6;
+    transition-property: left, top, opacity;
+  }
+  100% {
+    opacity: 0;
+    top: 110%;
+    left: 110%;
+    transition-property: left, top, opacity;
+  }
 }
